parser_yacc.output
   0  $accept : %entry% $end

   1  program : declars EOF
   2          | declars kripke EOF
   3          | imported declars EOF
   4          | imported declars kripke EOF

   5  imported : Import UIden
   6           | imported Import UIden

   7  declars :
   8          | declars Datatype Iden type_args Equal type_def
   9          | declars Var Iden Equal expr_single
  10          | declars Var Iden type_of_expr Equal expr_single
  11          | declars Val Iden Equal expr_single
  12          | declars Val Iden type_of_expr Equal expr_single
  13          | declars Function Iden args Equal expr
  14          | declars Function Iden args type_of_expr Equal expr

  15  type_args :
  16            | Iden type_args

  17  type_of_expr : Colon typ

  18  args : pattern
  19       | pattern args

  20  kripke : Model LB3 Init Equal expr Semicolon Transition pattern Equal expr Semicolon list_property RB3

  21  list_property :
  22                | property list_property

  23  property : Property Iden Equal formula

  24  formula : Top
  25          | Bottom
  26          | Iden list_expr
  27          | Neg formula
  28          | formula And formula
  29          | formula Or formula
  30          | AX LB1 Iden Comma formula Comma expr RB1
  31          | EX LB1 Iden Comma formula Comma expr RB1
  32          | AF LB1 Iden Comma formula Comma expr RB1
  33          | EG LB1 Iden Comma formula Comma expr RB1
  34          | AR LB1 Iden Comma Iden Comma formula Comma formula Comma expr RB1
  35          | EU LB1 Iden Comma Iden Comma formula Comma formula Comma expr RB1

  36  list_expr :
  37            | expr_single list_expr

  38  type_def : typ
  39           | constrs

  40  constrs : constr
  41          | constr Vertical constrs

  42  constr : UIden
  43         | UIden typ

  44  typ : TInt
  45      | TBool
  46      | TFloat
  47      | TUnt
  48      | TAray typ
  49      | TLst typ
  50      | Iden
  51      | Iden udt_args
  52      | LB1 tuple_typ RB1
  53      | record_typ
  54      | typ Arrow typ
  55      | LB1 typ RB1

  56  udt_args : typ
  57           | LB1 comma_udt_args RB1

  58  comma_udt_args : typ Comma typ
  59                 | typ Comma comma_udt_args

  60  tuple_typ : typ Comma typ
  61            | typ Comma tuple_typ

  62  record_typ : LB3 str_typs RB3

  63  str_typs : str_typ
  64           | str_typ str_typs

  65  str_typ : Iden Colon typ Semicolon

  66  expr : expr_single
  67       | expr_seq

  68  expr_seq : expr_single Semicolon expr_single
  69           | expr_single Semicolon expr_seq

  70  expr_single : Iden
  71              | Iden Dot expr_single
  72              | UIden Dot expr_single
  73              | Int
  74              | Float
  75              | LB1 RB1
  76              | LB2 Vertical expr_single_list Vertical RB2
  77              | LB2 expr_single_list RB2
  78              | True
  79              | False
  80              | LB1 expr_single Comma nonempty_single_expr_list_comma RB1
  81              | LB3 str_expr_list RB3
  82              | Negb expr_single
  83              | expr_single Ando expr_single
  84              | expr_single Oro expr_single
  85              | Minus expr_single
  86              | MinusDot expr_single
  87              | expr_single Add expr_single
  88              | expr_single Minus expr_single
  89              | expr_single Mult expr_single
  90              | expr_single AddDot expr_single
  91              | expr_single MinusDot expr_single
  92              | expr_single MultDot expr_single
  93              | expr_single Equal expr_single
  94              | expr_single Non_Equal expr_single
  95              | expr_single LT expr_single
  96              | expr_single GT expr_single
  97              | expr_single LE expr_single
  98              | expr_single GE expr_single
  99              | If expr_single Then expr
 100              | If expr_single Then expr else_expr
 101              | While expr_single Do expr Done
 102              | For Iden In LB2 expr_single DotDot expr_single RB2 Do expr Done
 103              | expr_single LArrow expr_single
 104              | Match expr_single With pattern_expr_list
 105              | expr_single With LB3 str_expr_list RB3
 106              | UIden
 107              | UIden expr_single
 108              | Iden nonempty_single_expr_list
 109              | Val Iden Equal expr_single
 110              | Var Iden Equal expr_single
 111              | expr_single LB2 expr_single RB2
 112              | LB1 expr_single RB1

 113  nonempty_single_expr_list_comma : expr_single
 114                                  | expr_single Comma nonempty_single_expr_list_comma

 115  nonempty_single_expr_list : expr_single
 116                            | expr_single nonempty_single_expr_list

 117  expr_single_list :
 118                   | expr_single
 119                   | expr_single Semicolon expr_single_list

 120  str_expr_list : Iden Equal expr Semicolon
 121                | str_expr_list Iden Equal expr Semicolon

 122  else_expr : Else expr

 123  pattern_expr_list : Vertical pattern_expr
 124                    | pattern_expr_list Vertical pattern_expr

 125  pattern_expr : pattern Arrow expr

 126  pattern : Iden
 127          | Int
 128          | Float
 129          | LB1 RB1
 130          | LB2 Vertical Vertical RB2
 131          | LB2 Vertical pattern_list Vertical RB2
 132          | LB2 RB2
 133          | LB2 pattern_list RB2
 134          | pattern ColonColon pattern
 135          | Underline
 136          | LB1 pattern Comma nonempty_pattern_list_comma RB1
 137          | UIden
 138          | UIden pattern
 139          | LB1 pattern RB1

 140  nonempty_pattern_list_comma : pattern
 141                              | pattern Comma nonempty_pattern_list_comma

 142  pattern_list : pattern
 143               | pattern Semicolon pattern_list

 144  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (144)
	declars : .  (7)

	Import  shift 3
	Datatype  reduce 7
	Val  reduce 7
	Var  reduce 7
	Model  reduce 7
	EOF  reduce 7
	Function  reduce 7

	program  goto 4
	declars  goto 5
	imported  goto 6


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	imported : Import . UIden  (5)

	UIden  shift 7
	.  error


state 4
	%entry% : '\001' program .  (144)

	.  reduce 144


state 5
	program : declars . EOF  (1)
	program : declars . kripke EOF  (2)
	declars : declars . Datatype Iden type_args Equal type_def  (8)
	declars : declars . Var Iden Equal expr_single  (9)
	declars : declars . Var Iden type_of_expr Equal expr_single  (10)
	declars : declars . Val Iden Equal expr_single  (11)
	declars : declars . Val Iden type_of_expr Equal expr_single  (12)
	declars : declars . Function Iden args Equal expr  (13)
	declars : declars . Function Iden args type_of_expr Equal expr  (14)

	Datatype  shift 8
	Val  shift 9
	Var  shift 10
	Model  shift 11
	EOF  shift 12
	Function  shift 13
	.  error

	kripke  goto 14


state 6
	program : imported . declars EOF  (3)
	program : imported . declars kripke EOF  (4)
	imported : imported . Import UIden  (6)
	declars : .  (7)

	Import  shift 15
	Datatype  reduce 7
	Val  reduce 7
	Var  reduce 7
	Model  reduce 7
	EOF  reduce 7
	Function  reduce 7

	declars  goto 16


state 7
	imported : Import UIden .  (5)

	.  reduce 5


state 8
	declars : declars Datatype . Iden type_args Equal type_def  (8)

	Iden  shift 17
	.  error


state 9
	declars : declars Val . Iden Equal expr_single  (11)
	declars : declars Val . Iden type_of_expr Equal expr_single  (12)

	Iden  shift 18
	.  error


state 10
	declars : declars Var . Iden Equal expr_single  (9)
	declars : declars Var . Iden type_of_expr Equal expr_single  (10)

	Iden  shift 19
	.  error


state 11
	kripke : Model . LB3 Init Equal expr Semicolon Transition pattern Equal expr Semicolon list_property RB3  (20)

	LB3  shift 20
	.  error


state 12
	program : declars EOF .  (1)

	.  reduce 1


state 13
	declars : declars Function . Iden args Equal expr  (13)
	declars : declars Function . Iden args type_of_expr Equal expr  (14)

	Iden  shift 21
	.  error


state 14
	program : declars kripke . EOF  (2)

	EOF  shift 22
	.  error


state 15
	imported : imported Import . UIden  (6)

	UIden  shift 23
	.  error


state 16
	program : imported declars . EOF  (3)
	program : imported declars . kripke EOF  (4)
	declars : declars . Datatype Iden type_args Equal type_def  (8)
	declars : declars . Var Iden Equal expr_single  (9)
	declars : declars . Var Iden type_of_expr Equal expr_single  (10)
	declars : declars . Val Iden Equal expr_single  (11)
	declars : declars . Val Iden type_of_expr Equal expr_single  (12)
	declars : declars . Function Iden args Equal expr  (13)
	declars : declars . Function Iden args type_of_expr Equal expr  (14)

	Datatype  shift 8
	Val  shift 9
	Var  shift 10
	Model  shift 11
	EOF  shift 24
	Function  shift 13
	.  error

	kripke  goto 25


state 17
	declars : declars Datatype Iden . type_args Equal type_def  (8)
	type_args : .  (15)

	Iden  shift 26
	Equal  reduce 15

	type_args  goto 27


state 18
	declars : declars Val Iden . Equal expr_single  (11)
	declars : declars Val Iden . type_of_expr Equal expr_single  (12)

	Equal  shift 28
	Colon  shift 29
	.  error

	type_of_expr  goto 30


state 19
	declars : declars Var Iden . Equal expr_single  (9)
	declars : declars Var Iden . type_of_expr Equal expr_single  (10)

	Equal  shift 31
	Colon  shift 29
	.  error

	type_of_expr  goto 32


state 20
	kripke : Model LB3 . Init Equal expr Semicolon Transition pattern Equal expr Semicolon list_property RB3  (20)

	Init  shift 33
	.  error


state 21
	declars : declars Function Iden . args Equal expr  (13)
	declars : declars Function Iden . args type_of_expr Equal expr  (14)

	Int  shift 34
	Float  shift 35
	Iden  shift 36
	UIden  shift 37
	Underline  shift 38
	LB1  shift 39
	LB2  shift 40
	.  error

	args  goto 41
	pattern  goto 42


state 22
	program : declars kripke EOF .  (2)

	.  reduce 2


state 23
	imported : imported Import UIden .  (6)

	.  reduce 6


state 24
	program : imported declars EOF .  (3)

	.  reduce 3


state 25
	program : imported declars kripke . EOF  (4)

	EOF  shift 43
	.  error


state 26
	type_args : Iden . type_args  (16)
	type_args : .  (15)

	Iden  shift 26
	Equal  reduce 15

	type_args  goto 44


state 27
	declars : declars Datatype Iden type_args . Equal type_def  (8)

	Equal  shift 45
	.  error


state 28
	declars : declars Val Iden Equal . expr_single  (11)

	Int  shift 46
	Float  shift 47
	Iden  shift 48
	UIden  shift 49
	Val  shift 50
	Var  shift 51
	Match  shift 52
	If  shift 53
	For  shift 54
	While  shift 55
	LB1  shift 56
	LB2  shift 57
	LB3  shift 58
	Minus  shift 59
	MinusDot  shift 60
	Negb  shift 61
	True  shift 62
	False  shift 63
	.  error

	expr_single  goto 64


state 29
	type_of_expr : Colon . typ  (17)

	Iden  shift 65
	LB1  shift 66
	LB3  shift 67
	TLst  shift 68
	TFloat  shift 69
	TAray  shift 70
	TInt  shift 71
	TBool  shift 72
	TUnt  shift 73
	.  error

	typ  goto 74
	record_typ  goto 75


state 30
	declars : declars Val Iden type_of_expr . Equal expr_single  (12)

	Equal  shift 76
	.  error


state 31
	declars : declars Var Iden Equal . expr_single  (9)

	Int  shift 46
	Float  shift 47
	Iden  shift 48
	UIden  shift 49
	Val  shift 50
	Var  shift 51
	Match  shift 52
	If  shift 53
	For  shift 54
	While  shift 55
	LB1  shift 56
	LB2  shift 57
	LB3  shift 58
	Minus  shift 59
	MinusDot  shift 60
	Negb  shift 61
	True  shift 62
	False  shift 63
	.  error

	expr_single  goto 77


state 32
	declars : declars Var Iden type_of_expr . Equal expr_single  (10)

	Equal  shift 78
	.  error


state 33
	kripke : Model LB3 Init . Equal expr Semicolon Transition pattern Equal expr Semicolon list_property RB3  (20)

	Equal  shift 79
	.  error


state 34
	pattern : Int .  (127)

	.  reduce 127


state 35
	pattern : Float .  (128)

	.  reduce 128


state 36
	pattern : Iden .  (126)

	.  reduce 126


37: shift/reduce conflict (shift 34, reduce 137) on Int
37: shift/reduce conflict (shift 35, reduce 137) on Float
37: shift/reduce conflict (shift 36, reduce 137) on Iden
37: shift/reduce conflict (shift 37, reduce 137) on UIden
37: shift/reduce conflict (shift 38, reduce 137) on Underline
37: shift/reduce conflict (shift 39, reduce 137) on LB1
37: shift/reduce conflict (shift 40, reduce 137) on LB2
state 37
	pattern : UIden .  (137)
	pattern : UIden . pattern  (138)

	Int  shift 34
	Float  shift 35
	Iden  shift 36
	UIden  shift 37
	Underline  shift 38
	LB1  shift 39
	LB2  shift 40
	Vertical  reduce 137
	RB1  reduce 137
	RB2  reduce 137
	Equal  reduce 137
	Comma  reduce 137
	Semicolon  reduce 137
	Arrow  reduce 137
	Colon  reduce 137
	ColonColon  reduce 137

	pattern  goto 80


state 38
	pattern : Underline .  (135)

	.  reduce 135


state 39
	pattern : LB1 . RB1  (129)
	pattern : LB1 . pattern Comma nonempty_pattern_list_comma RB1  (136)
	pattern : LB1 . pattern RB1  (139)

	Int  shift 34
	Float  shift 35
	Iden  shift 36
	UIden  shift 37
	Underline  shift 38
	LB1  shift 39
	RB1  shift 81
	LB2  shift 40
	.  error

	pattern  goto 82


state 40
	pattern : LB2 . Vertical Vertical RB2  (130)
	pattern : LB2 . Vertical pattern_list Vertical RB2  (131)
	pattern : LB2 . RB2  (132)
	pattern : LB2 . pattern_list RB2  (133)

	Int  shift 34
	Float  shift 35
	Iden  shift 36
	UIden  shift 37
	Vertical  shift 83
	Underline  shift 38
	LB1  shift 39
	LB2  shift 40
	RB2  shift 84
	.  error

	pattern  goto 85
	pattern_list  goto 86


state 41
	declars : declars Function Iden args . Equal expr  (13)
	declars : declars Function Iden args . type_of_expr Equal expr  (14)

	Equal  shift 87
	Colon  shift 29
	.  error

	type_of_expr  goto 88


state 42
	args : pattern .  (18)
	args : pattern . args  (19)
	pattern : pattern . ColonColon pattern  (134)

	Int  shift 34
	Float  shift 35
	Iden  shift 36
	UIden  shift 37
	Underline  shift 38
	LB1  shift 39
	LB2  shift 40
	ColonColon  shift 89
	Equal  reduce 18
	Colon  reduce 18

	args  goto 90
	pattern  goto 42


state 43
	program : imported declars kripke EOF .  (4)

	.  reduce 4


state 44
	type_args : Iden type_args .  (16)

	.  reduce 16


state 45
	declars : declars Datatype Iden type_args Equal . type_def  (8)

	Iden  shift 65
	UIden  shift 91
	LB1  shift 66
	LB3  shift 67
	TLst  shift 68
	TFloat  shift 69
	TAray  shift 70
	TInt  shift 71
	TBool  shift 72
	TUnt  shift 73
	.  error

	type_def  goto 92
	typ  goto 93
	constrs  goto 94
	constr  goto 95
	record_typ  goto 75


state 46
	expr_single : Int .  (73)

	.  reduce 73


state 47
	expr_single : Float .  (74)

	.  reduce 74


48: shift/reduce conflict (shift 46, reduce 70) on Int
48: shift/reduce conflict (shift 47, reduce 70) on Float
48: shift/reduce conflict (shift 48, reduce 70) on Iden
48: shift/reduce conflict (shift 49, reduce 70) on UIden
48: shift/reduce conflict (shift 50, reduce 70) on Val
48: shift/reduce conflict (shift 51, reduce 70) on Var
48: shift/reduce conflict (shift 52, reduce 70) on Match
48: shift/reduce conflict (shift 53, reduce 70) on If
48: shift/reduce conflict (shift 54, reduce 70) on For
48: shift/reduce conflict (shift 55, reduce 70) on While
48: shift/reduce conflict (shift 56, reduce 70) on LB1
48: shift/reduce conflict (shift 57, reduce 70) on LB2
48: shift/reduce conflict (shift 58, reduce 70) on LB3
48: shift/reduce conflict (shift 59, reduce 70) on Minus
48: shift/reduce conflict (shift 60, reduce 70) on MinusDot
48: shift/reduce conflict (shift 61, reduce 70) on Negb
48: shift/reduce conflict (shift 62, reduce 70) on True
48: shift/reduce conflict (shift 63, reduce 70) on False
state 48
	expr_single : Iden .  (70)
	expr_single : Iden . Dot expr_single  (71)
	expr_single : Iden . nonempty_single_expr_list  (108)

	Int  shift 46
	Float  shift 47
	Iden  shift 48
	UIden  shift 49
	Val  shift 50
	Var  shift 51
	Match  shift 52
	If  shift 53
	For  shift 54
	While  shift 55
	LB1  shift 56
	LB2  shift 57
	LB3  shift 58
	Dot  shift 96
	Minus  shift 59
	MinusDot  shift 60
	Negb  shift 61
	True  shift 62
	False  shift 63
	Datatype  reduce 70
	Vertical  reduce 70
	With  reduce 70
	Model  reduce 70
	Property  reduce 70
	Then  reduce 70
	Else  reduce 70
	Do  reduce 70
	Done  reduce 70
	RB1  reduce 70
	RB2  reduce 70
	RB3  reduce 70
	Equal  reduce 70
	Non_Equal  reduce 70
	LT  reduce 70
	GT  reduce 70
	LE  reduce 70
	GE  reduce 70
	Comma  reduce 70
	Semicolon  reduce 70
	DotDot  reduce 70
	EOF  reduce 70
	Add  reduce 70
	AddDot  reduce 70
	Mult  reduce 70
	MultDot  reduce 70
	Ando  reduce 70
	Oro  reduce 70
	And  reduce 70
	Or  reduce 70
	LArrow  reduce 70
	Function  reduce 70

	expr_single  goto 97
	nonempty_single_expr_list  goto 98


49: shift/reduce conflict (shift 46, reduce 106) on Int
49: shift/reduce conflict (shift 47, reduce 106) on Float
49: shift/reduce conflict (shift 48, reduce 106) on Iden
49: shift/reduce conflict (shift 49, reduce 106) on UIden
49: shift/reduce conflict (shift 50, reduce 106) on Val
49: shift/reduce conflict (shift 51, reduce 106) on Var
49: shift/reduce conflict (shift 52, reduce 106) on Match
49: shift/reduce conflict (shift 53, reduce 106) on If
49: shift/reduce conflict (shift 54, reduce 106) on For
49: shift/reduce conflict (shift 55, reduce 106) on While
49: shift/reduce conflict (shift 56, reduce 106) on LB1
49: shift/reduce conflict (shift 57, reduce 106) on LB2
49: shift/reduce conflict (shift 58, reduce 106) on LB3
49: shift/reduce conflict (shift 59, reduce 106) on Minus
49: shift/reduce conflict (shift 60, reduce 106) on MinusDot
49: shift/reduce conflict (shift 61, reduce 106) on Negb
49: shift/reduce conflict (shift 62, reduce 106) on True
49: shift/reduce conflict (shift 63, reduce 106) on False
state 49
	expr_single : UIden . Dot expr_single  (72)
	expr_single : UIden .  (106)
	expr_single : UIden . expr_single  (107)

	Int  shift 46
	Float  shift 47
	Iden  shift 48
	UIden  shift 49
	Val  shift 50
	Var  shift 51
	Match  shift 52
	If  shift 53
	For  shift 54
	While  shift 55
	LB1  shift 56
	LB2  shift 57
	LB3  shift 58
	Dot  shift 99
	Minus  shift 59
	MinusDot  shift 60
	Negb  shift 61
	True  shift 62
	False  shift 63
	Datatype  reduce 106
	Vertical  reduce 106
	With  reduce 106
	Model  reduce 106
	Property  reduce 106
	Then  reduce 106
	Else  reduce 106
	Do  reduce 106
	Done  reduce 106
	RB1  reduce 106
	RB2  reduce 106
	RB3  reduce 106
	Equal  reduce 106
	Non_Equal  reduce 106
	LT  reduce 106
	GT  reduce 106
	LE  reduce 106
	GE  reduce 106
	Comma  reduce 106
	Semicolon  reduce 106
	DotDot  reduce 106
	EOF  reduce 106
	Add  reduce 106
	AddDot  reduce 106
	Mult  reduce 106
	MultDot  reduce 106
	Ando  reduce 106
	Oro  reduce 106
	And  reduce 106
	Or  reduce 106
	LArrow  reduce 106
	Function  reduce 106

	expr_single  goto 100


state 50
	expr_single : Val . Iden Equal expr_single  (109)

	Iden  shift 101
	.  error


state 51
	expr_single : Var . Iden Equal expr_single  (110)

	Iden  shift 102
	.  error


state 52
	expr_single : Match . expr_single With pattern_expr_list  (104)

	Int  shift 46
	Float  shift 47
	Iden  shift 48
	UIden  shift 49
	Val  shift 50
	Var  shift 51
	Match  shift 52
	If  shift 53
	For  shift 54
	While  shift 55
	LB1  shift 56
	LB2  shift 57
	LB3  shift 58
	Minus  shift 59
	MinusDot  shift 60
	Negb  shift 61
	True  shift 62
	False  shift 63
	.  error

	expr_single  goto 103


state 53
	expr_single : If . expr_single Then expr  (99)
	expr_single : If . expr_single Then expr else_expr  (100)

	Int  shift 46
	Float  shift 47
	Iden  shift 48
	UIden  shift 49
	Val  shift 50
	Var  shift 51
	Match  shift 52
	If  shift 53
	For  shift 54
	While  shift 55
	LB1  shift 56
	LB2  shift 57
	LB3  shift 58
	Minus  shift 59
	MinusDot  shift 60
	Negb  shift 61
	True  shift 62
	False  shift 63
	.  error

	expr_single  goto 104


state 54
	expr_single : For . Iden In LB2 expr_single DotDot expr_single RB2 Do expr Done  (102)

	Iden  shift 105
	.  error


state 55
	expr_single : While . expr_single Do expr Done  (101)

	Int  shift 46
	Float  shift 47
	Iden  shift 48
	UIden  shift 49
	Val  shift 50
	Var  shift 51
	Match  shift 52
	If  shift 53
	For  shift 54
	While  shift 55
	LB1  shift 56
	LB2  shift 57
	LB3  shift 58
	Minus  shift 59
	MinusDot  shift 60
	Negb  shift 61
	True  shift 62
	False  shift 63
	.  error

	expr_single  goto 106


state 56
	expr_single : LB1 . RB1  (75)
	expr_single : LB1 . expr_single Comma nonempty_single_expr_list_comma RB1  (80)
	expr_single : LB1 . expr_single RB1  (112)

	Int  shift 46
	Float  shift 47
	Iden  shift 48
	UIden  shift 49
	Val  shift 50
	Var  shift 51
	Match  shift 52
	If  shift 53
	For  shift 54
	While  shift 55
	LB1  shift 56
	RB1  shift 107
	LB2  shift 57
	LB3  shift 58
	Minus  shift 59
	MinusDot  shift 60
	Negb  shift 61
	True  shift 62
	False  shift 63
	.  error

	expr_single  goto 108


state 57
	expr_single : LB2 . Vertical expr_single_list Vertical RB2  (76)
	expr_single : LB2 . expr_single_list RB2  (77)
	expr_single_list : .  (117)

	Int  shift 46
	Float  shift 47
	Iden  shift 48
	UIden  shift 49
	Vertical  shift 109
	Val  shift 50
	Var  shift 51
	Match  shift 52
	If  shift 53
	For  shift 54
	While  shift 55
	LB1  shift 56
	LB2  shift 57
	LB3  shift 58
	Minus  shift 59
	MinusDot  shift 60
	Negb  shift 61
	True  shift 62
	False  shift 63
	RB2  reduce 117

	expr_single  goto 110
	expr_single_list  goto 111


state 58
	expr_single : LB3 . str_expr_list RB3  (81)

	Iden  shift 112
	.  error

	str_expr_list  goto 113


state 59
	expr_single : Minus . expr_single  (85)

	Int  shift 46
	Float  shift 47
	Iden  shift 48
	UIden  shift 49
	Val  shift 50
	Var  shift 51
	Match  shift 52
	If  shift 53
	For  shift 54
	While  shift 55
	LB1  shift 56
	LB2  shift 57
	LB3  shift 58
	Minus  shift 59
	MinusDot  shift 60
	Negb  shift 61
	True  shift 62
	False  shift 63
	.  error

	expr_single  goto 114


state 60
	expr_single : MinusDot . expr_single  (86)

	Int  shift 46
	Float  shift 47
	Iden  shift 48
	UIden  shift 49
	Val  shift 50
	Var  shift 51
	Match  shift 52
	If  shift 53
	For  shift 54
	While  shift 55
	LB1  shift 56
	LB2  shift 57
	LB3  shift 58
	Minus  shift 59
	MinusDot  shift 60
	Negb  shift 61
	True  shift 62
	False  shift 63
	.  error

	expr_single  goto 115


state 61
	expr_single : Negb . expr_single  (82)

	Int  shift 46
	Float  shift 47
	Iden  shift 48
	UIden  shift 49
	Val  shift 50
	Var  shift 51
	Match  shift 52
	If  shift 53
	For  shift 54
	While  shift 55
	LB1  shift 56
	LB2  shift 57
	LB3  shift 58
	Minus  shift 59
	MinusDot  shift 60
	Negb  shift 61
	True  shift 62
	False  shift 63
	.  error

	expr_single  goto 116


state 62
	expr_single : True .  (78)

	.  reduce 78


state 63
	expr_single : False .  (79)

	.  reduce 79


state 64
	declars : declars Val Iden Equal expr_single .  (11)
	expr_single : expr_single . Ando expr_single  (83)
	expr_single : expr_single . Oro expr_single  (84)
	expr_single : expr_single . Add expr_single  (87)
	expr_single : expr_single . Minus expr_single  (88)
	expr_single : expr_single . Mult expr_single  (89)
	expr_single : expr_single . AddDot expr_single  (90)
	expr_single : expr_single . MinusDot expr_single  (91)
	expr_single : expr_single . MultDot expr_single  (92)
	expr_single : expr_single . Equal expr_single  (93)
	expr_single : expr_single . Non_Equal expr_single  (94)
	expr_single : expr_single . LT expr_single  (95)
	expr_single : expr_single . GT expr_single  (96)
	expr_single : expr_single . LE expr_single  (97)
	expr_single : expr_single . GE expr_single  (98)
	expr_single : expr_single . LArrow expr_single  (103)
	expr_single : expr_single . With LB3 str_expr_list RB3  (105)
	expr_single : expr_single . LB2 expr_single RB2  (111)

	With  shift 117
	LB2  shift 118
	Equal  shift 119
	Non_Equal  shift 120
	LT  shift 121
	GT  shift 122
	LE  shift 123
	GE  shift 124
	Add  shift 125
	AddDot  shift 126
	Minus  shift 127
	MinusDot  shift 128
	Mult  shift 129
	MultDot  shift 130
	Ando  shift 131
	Oro  shift 132
	LArrow  shift 133
	Datatype  reduce 11
	Val  reduce 11
	Var  reduce 11
	Model  reduce 11
	EOF  reduce 11
	Function  reduce 11


state 65
	typ : Iden .  (50)
	typ : Iden . udt_args  (51)

	Iden  shift 65
	LB1  shift 134
	LB3  shift 67
	TLst  shift 68
	TFloat  shift 69
	TAray  shift 70
	TInt  shift 71
	TBool  shift 72
	TUnt  shift 73
	Datatype  reduce 50
	Vertical  reduce 50
	Val  reduce 50
	Var  reduce 50
	Model  reduce 50
	RB1  reduce 50
	Equal  reduce 50
	Comma  reduce 50
	Semicolon  reduce 50
	Arrow  reduce 50
	EOF  reduce 50
	Function  reduce 50

	typ  goto 135
	udt_args  goto 136
	record_typ  goto 75


state 66
	typ : LB1 . tuple_typ RB1  (52)
	typ : LB1 . typ RB1  (55)

	Iden  shift 65
	LB1  shift 66
	LB3  shift 67
	TLst  shift 68
	TFloat  shift 69
	TAray  shift 70
	TInt  shift 71
	TBool  shift 72
	TUnt  shift 73
	.  error

	typ  goto 137
	tuple_typ  goto 138
	record_typ  goto 75


state 67
	record_typ : LB3 . str_typs RB3  (62)

	Iden  shift 139
	.  error

	str_typs  goto 140
	str_typ  goto 141


state 68
	typ : TLst . typ  (49)

	Iden  shift 65
	LB1  shift 66
	LB3  shift 67
	TLst  shift 68
	TFloat  shift 69
	TAray  shift 70
	TInt  shift 71
	TBool  shift 72
	TUnt  shift 73
	.  error

	typ  goto 142
	record_typ  goto 75


state 69
	typ : TFloat .  (46)

	.  reduce 46


state 70
	typ : TAray . typ  (48)

	Iden  shift 65
	LB1  shift 66
	LB3  shift 67
	TLst  shift 68
	TFloat  shift 69
	TAray  shift 70
	TInt  shift 71
	TBool  shift 72
	TUnt  shift 73
	.  error

	typ  goto 143
	record_typ  goto 75


state 71
	typ : TInt .  (44)

	.  reduce 44


state 72
	typ : TBool .  (45)

	.  reduce 45


state 73
	typ : TUnt .  (47)

	.  reduce 47


state 74
	type_of_expr : Colon typ .  (17)
	typ : typ . Arrow typ  (54)

	Arrow  shift 144
	Equal  reduce 17


state 75
	typ : record_typ .  (53)

	.  reduce 53


state 76
	declars : declars Val Iden type_of_expr Equal . expr_single  (12)

	Int  shift 46
	Float  shift 47
	Iden  shift 48
	UIden  shift 49
	Val  shift 50
	Var  shift 51
	Match  shift 52
	If  shift 53
	For  shift 54
	While  shift 55
	LB1  shift 56
	LB2  shift 57
	LB3  shift 58
	Minus  shift 59
	MinusDot  shift 60
	Negb  shift 61
	True  shift 62
	False  shift 63
	.  error

	expr_single  goto 145


state 77
	declars : declars Var Iden Equal expr_single .  (9)
	expr_single : expr_single . Ando expr_single  (83)
	expr_single : expr_single . Oro expr_single  (84)
	expr_single : expr_single . Add expr_single  (87)
	expr_single : expr_single . Minus expr_single  (88)
	expr_single : expr_single . Mult expr_single  (89)
	expr_single : expr_single . AddDot expr_single  (90)
	expr_single : expr_single . MinusDot expr_single  (91)
	expr_single : expr_single . MultDot expr_single  (92)
	expr_single : expr_single . Equal expr_single  (93)
	expr_single : expr_single . Non_Equal expr_single  (94)
	expr_single : expr_single . LT expr_single  (95)
	expr_single : expr_single . GT expr_single  (96)
	expr_single : expr_single . LE expr_single  (97)
	expr_single : expr_single . GE expr_single  (98)
	expr_single : expr_single . LArrow expr_single  (103)
	expr_single : expr_single . With LB3 str_expr_list RB3  (105)
	expr_single : expr_single . LB2 expr_single RB2  (111)

	With  shift 117
	LB2  shift 118
	Equal  shift 119
	Non_Equal  shift 120
	LT  shift 121
	GT  shift 122
	LE  shift 123
	GE  shift 124
	Add  shift 125
	AddDot  shift 126
	Minus  shift 127
	MinusDot  shift 128
	Mult  shift 129
	MultDot  shift 130
	Ando  shift 131
	Oro  shift 132
	LArrow  shift 133
	Datatype  reduce 9
	Val  reduce 9
	Var  reduce 9
	Model  reduce 9
	EOF  reduce 9
	Function  reduce 9


state 78
	declars : declars Var Iden type_of_expr Equal . expr_single  (10)

	Int  shift 46
	Float  shift 47
	Iden  shift 48
	UIden  shift 49
	Val  shift 50
	Var  shift 51
	Match  shift 52
	If  shift 53
	For  shift 54
	While  shift 55
	LB1  shift 56
	LB2  shift 57
	LB3  shift 58
	Minus  shift 59
	MinusDot  shift 60
	Negb  shift 61
	True  shift 62
	False  shift 63
	.  error

	expr_single  goto 146


state 79
	kripke : Model LB3 Init Equal . expr Semicolon Transition pattern Equal expr Semicolon list_property RB3  (20)

	Int  shift 46
	Float  shift 47
	Iden  shift 48
	UIden  shift 49
	Val  shift 50
	Var  shift 51
	Match  shift 52
	If  shift 53
	For  shift 54
	While  shift 55
	LB1  shift 56
	LB2  shift 57
	LB3  shift 58
	Minus  shift 59
	MinusDot  shift 60
	Negb  shift 61
	True  shift 62
	False  shift 63
	.  error

	expr_single  goto 147
	expr  goto 148
	expr_seq  goto 149


80: shift/reduce conflict (shift 89, reduce 138) on ColonColon
state 80
	pattern : pattern . ColonColon pattern  (134)
	pattern : UIden pattern .  (138)

	ColonColon  shift 89
	Int  reduce 138
	Float  reduce 138
	Iden  reduce 138
	UIden  reduce 138
	Vertical  reduce 138
	Underline  reduce 138
	LB1  reduce 138
	RB1  reduce 138
	LB2  reduce 138
	RB2  reduce 138
	Equal  reduce 138
	Comma  reduce 138
	Semicolon  reduce 138
	Arrow  reduce 138
	Colon  reduce 138


state 81
	pattern : LB1 RB1 .  (129)

	.  reduce 129


state 82
	pattern : pattern . ColonColon pattern  (134)
	pattern : LB1 pattern . Comma nonempty_pattern_list_comma RB1  (136)
	pattern : LB1 pattern . RB1  (139)

	RB1  shift 150
	Comma  shift 151
	ColonColon  shift 89
	.  error


state 83
	pattern : LB2 Vertical . Vertical RB2  (130)
	pattern : LB2 Vertical . pattern_list Vertical RB2  (131)

	Int  shift 34
	Float  shift 35
	Iden  shift 36
	UIden  shift 37
	Vertical  shift 152
	Underline  shift 38
	LB1  shift 39
	LB2  shift 40
	.  error

	pattern  goto 85
	pattern_list  goto 153


state 84
	pattern : LB2 RB2 .  (132)

	.  reduce 132

